--- a/my-index.ejs
+++ b/my-index.ejs
@@ -52,6 +52,7 @@
 
     <link href="/reactapp/prefixed-bootstrap.min.css" rel="stylesheet"></link>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.9/semantic.min.css">
 </head>
 <body>
 
