--- a/my-index.ejs
+++ b/my-index.ejs
@@ -9,7 +9,7 @@
         window.devContext = true;
         window.frontendConfig = {
         }
-
+/* REMOVED: This is an example of how to add custom tabs to the patient page. Enabling this will clobber localStorage.frontendConfig that is set through the browser console
         localStorage.frontendConfig = JSON.stringify(
             {
                 serverConfig:{
@@ -41,6 +41,7 @@
 
            }
         );
+        */
 
     function renderCustomTab1(div, tab){
         $(div).append(`<div>this is the content for <strong>${tab.title}</strong></div>`);
