--- a/my-index.ejs
+++ b/my-index.ejs
@@ -8,6 +8,7 @@
 
         window.devContext = true;
         window.frontendConfig = {
+            serverConfig:{}
         }
 /* REMOVED: This is an example of how to add custom tabs to the patient page. Enabling this will clobber localStorage.frontendConfig that is set through the browser console
         localStorage.frontendConfig = JSON.stringify(
